syntax = "proto3";

option go_package = "github.com/aliaksandrp/microservice-priceFetcher/proto";

service PriceFetcher {
  rpc FetchPrice(FetchPriceRequest) returns (FetchPriceResponse);
  rpc StreamPrices(StreamPricesRequest) returns (stream StreamPricesResponse);
}

message FetchPriceRequest { string ticker = 1; }

message FetchPriceResponse {
  string ticker = 1;
  float price = 2;
}

message StreamPricesRequest {
  repeated string tickers = 1;
  int32 interval_seconds = 2;
}

message StreamPricesResponse {
  string ticker = 1;
  float price = 2;
  string timestamp = 3;
}
